--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.agenda.MainActivity">
+    tools:context="com.example.agenda.MainActivity"
+    android:background="@color/sky">
 
     <SearchView
         android:id="@+id/txtBuscar"
