--- a/app/src/main/res/layout/activity_ver.xml
+++ b/app/src/main/res/layout/activity_ver.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sky"
     android:orientation="vertical"
     tools:context="com.example.agenda.VerActivity">
 
@@ -41,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/morado"
+        android:textColor="@color/black"
         android:text="@string/btn_guarda"
         android:textSize="24sp" />
 
