--- a/app/src/main/res/layout/activity_nuevo.xml
+++ b/app/src/main/res/layout/activity_nuevo.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sky"
     android:orientation="vertical"
-    tools:context="com.example.agenda.NuevoActivity"
-    android:background="@color/sky">
+    tools:context="com.example.agenda.NuevoActivity">
 
     <EditText
         android:id="@+id/txtNombre"
@@ -30,8 +31,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/morado"
-        android:textColor="@color/black"
         android:text="@string/btn_guarda"
+        android:textColor="@color/black"
+        android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/btnSorpresa"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/morado"
+        android:text="@string/btn_sorpresa"
+        android:textColor="@color/black"
         android:textSize="24sp" />
 
 </LinearLayout>
